change fixed header script to support tablesorter & align headers

--- a/testsuite-site/media/css/custom.css
+++ b/testsuite-site/media/css/custom.css
@@ -78,7 +78,6 @@ a:hover {
 
 .navbar ul li ul {
   padding: 0;
-  position: absolute;
   width: 150px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -104,9 +103,6 @@ a:hover {
     font-size: 12px;
 }
 
-
-
-.container { padding: 20px !important; }
 
 div.front { width: 100%; }
 div.front-left { float: left; width: 45%; margin-right: 40px; height: 300px; }
@@ -146,11 +142,13 @@ th {
 .table-striped>tbody>tr:nth-child(odd)>td {
     background-color: #caf2ff;
     border: 0;
+    padding: 20px !important;
 }
 
 .table-striped>tbody>tr:nth-child(even)>td {
     background-color: #caf2ff;
     border: 0;
+    padding: 20px !important;
 }
 
 .table-bordered>tbody>tr {
@@ -205,8 +203,6 @@ tr.category-h1 h1 {
 
 tr.category-h1>td { 
     background-color: #008AB8 !important;
-    border-top: 1px solid #ddd !important;
-    border-bottom: 1px solid #ddd !important;
 }
 
 tr.category-h2 h2 {
@@ -296,6 +292,23 @@ td.results-notes {
     background-color: #eaf8fc !important;
     padding: 20px !important;
 }
+.category-h1 {
+    background-color: #008AB8 !important;
+    border-top: 1px solid #ddd !important;
+    border-bottom: 1px solid #ddd !important;    
+}
+.category-h1.scroll-to-fixed-fixed {
+    background-color: #008AB8 !important;
+    border-top: 1px solid #ddd !important;
+    border-bottom: 1px solid #ddd !important;
+}
+.category-h1.scroll-to-fixed-fixed h1 {
+    padding-left: 65px;
+}
+input.fixed {
+    float: right;
+    margin: 30px 20px;
+}
 #input-wrapper.top-input {
   z-index: 99;
   position: fixed;
@@ -330,7 +343,7 @@ form#testsuite_form .results table>tbody>tr {
 }
 
 form#testsuite_form .results table>tbody>tr>td {
-    padding: 10px !important;
+    /*padding: 10px !important;*/
 }
 
 .results table { 
@@ -340,8 +353,17 @@ form#testsuite_form .results table>tbody>tr>td {
 .results tr.header-row { 
     border-top: 2px solid #0099cc;
     border-bottom: 2px solid #0099cc;
+    background: #fff;
+}
+.results tr.scroll-to-fixed-fixed { 
+        border-top: 2px solid #0099cc;
+    border-bottom: 2px solid #0099cc;
+    background: #fff;
 }
 
+.results tr.scroll-to-fixed-fixed>[data-column="0"]  { 
+    width: 225px !important;
+}
 .results table>tbody>tr {
     border-bottom: 10px solid white;
 }
@@ -351,28 +373,43 @@ form#testsuite_form .results table {
 }
 
 .results td.reading_system_name { 
-    border-right: 40px solid white !important;
+    /*border-right: 40px solid white !important;*/
+    width: 225px;
 }
 
 [data-column="0"] {
-    border-right: 40px solid white !important;
+    /*border-right: 40px solid white !important;*/
+    width: 225px;
 }
 
+
+
+.results td.result {
+    padding: 15px !important;
+}
 .results td.result.danger {
     background-color: #ffcccc;
-    padding: 10px;
     border: 1px solid #fff;
 }
 
 .results td.result.success {
     background-color: #c5de9e;
-    padding: 10px;
     border: 1px solid #fff;
+}
+
+.results td[data-column="0"] {
+    width: 225px;
+}
+.results td.tablesorter-header {
+    width: 118px !important;
+    height: 62px !important;
 }
 
 .results tr.test_descriptions>td {
 
 }
+
+
 
 footer {
         padding-top: 40px;
@@ -671,7 +708,29 @@ span.warn {
     /*border-bottom: #000 2px solid;*/
 }
 
-@media only screen and (max-width: 720px) {
+.sticky-header {
+    position: fixed;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.sticky-header table {
+    background-color: #fff;
+}
+
+.sticky-table-for-shifting {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.hidden {
+    display: none !important;
+}
+
+
+
+@media screen and (max-width: 720px) {
     .navbar a.navbar-brand {
         float: left;
         margin: 0;
@@ -679,9 +738,23 @@ span.warn {
 
     .container {
         width: 100% !important;
+        padding: 20px !important;
     }
     .container .front-left {
         width: 100% !important;
         height: auto !important;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .navbar {
+        max-height: 50px;
+    }
+}
+
+@media screen and (min-width: 720px) {
+    .front-right {
+        width: 45%;
+        float: left;
     }
 }
